[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/UI/Menu_style.tres" type="StyleBox" id=1]
[ext_resource path="res://Scenes/UI/ChangeSpriteScreen.gd" type="Script" id=2]
[ext_resource path="res://Fonts/RobotoMono 64.tres" type="DynamicFont" id=3]
[ext_resource path="res://Images/Bird/default2.png" type="Texture" id=4]
[ext_resource path="res://Images/Bird/Red.png" type="Texture" id=5]
[ext_resource path="res://Images/Bird/Blue.png" type="Texture" id=6]
[ext_resource path="res://Images/Bird/Green.png" type="Texture" id=7]
[ext_resource path="res://Images/Bird/Pink.png" type="Texture" id=8]
[ext_resource path="res://Fonts/RobotoMono 96.tres" type="DynamicFont" id=9]
[ext_resource path="res://Images/Bird/Rabbit.png" type="Texture" id=10]
[ext_resource path="res://Scenes/background/ParallaxBg.gd" type="Script" id=11]
[ext_resource path="res://Images/Bird/border.png" type="Texture" id=12]
[ext_resource path="res://Scenes/background/scroll_bg_sky.png" type="Texture" id=13]
[ext_resource path="res://Scenes/background/scroll_bg_cloud_3.png" type="Texture" id=14]
[ext_resource path="res://Scenes/background/scroll_bg_cloud_1.png" type="Texture" id=15]
[ext_resource path="res://Scenes/background/scroll_bg_fg_1.png" type="Texture" id=16]
[ext_resource path="res://Scenes/background/scroll_bg_fg_2.png" type="Texture" id=17]
[ext_resource path="res://Scenes/background/scroll_bg_cloud_2.png" type="Texture" id=18]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 0 )

[node name="ChangeSprite" type="CanvasLayer"]
pause_mode = 2
layer = 2
offset = Vector2( -200, -100 )
transform = Transform2D( 1, 0, 0, 1, -200, -100 )
script = ExtResource( 2 )

[node name="Overlay" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 13.0
margin_right = 323.0
margin_bottom = 249.0
rect_scale = Vector2( 1.3, 1.3 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 356.0
margin_top = 100.0
margin_right = 1226.0
margin_bottom = 228.0
rect_scale = Vector2( 1.2, 1.2 )
custom_colors/font_color = Color( 1, 0.772549, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Change Feathers"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 12360.0
margin_bottom = 7733.0
rect_scale = Vector2( 0.14, 0.14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 3110.0
margin_top = 2396.0
margin_right = 9230.0
margin_bottom = 5316.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 6110.0
margin_bottom = 2910.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
margin_right = 6100.0
margin_bottom = 2900.0
custom_constants/vseparation = 500
custom_constants/hseparation = 500
columns = 3

[node name="Yellow" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/GridContainer"]
margin_right = 1700.0
margin_bottom = 1200.0
toggle_mode = true
texture_normal = ExtResource( 4 )

[node name="Green" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/GridContainer"]
margin_left = 2200.0
margin_right = 3900.0
margin_bottom = 1200.0
rect_pivot_offset = Vector2( 200, 200 )
toggle_mode = true
texture_normal = ExtResource( 7 )

[node name="Red" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/GridContainer"]
margin_left = 4400.0
margin_right = 6100.0
margin_bottom = 1200.0
toggle_mode = true
texture_normal = ExtResource( 5 )

[node name="Blue" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/GridContainer"]
margin_top = 1700.0
margin_right = 1700.0
margin_bottom = 2900.0
toggle_mode = true
texture_normal = ExtResource( 6 )

[node name="Pink" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/GridContainer"]
margin_left = 2200.0
margin_top = 1700.0
margin_right = 3900.0
margin_bottom = 2900.0
toggle_mode = true
texture_normal = ExtResource( 8 )

[node name="Rabbit" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/GridContainer"]
margin_left = 4400.0
margin_top = 1700.0
margin_right = 6100.0
margin_bottom = 2900.0
toggle_mode = true
texture_normal = ExtResource( 10 )

[node name="Border" type="Sprite" parent="."]
position = Vector2( 1192, 678 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 12 )

[node name="Save" type="Button" parent="."]
margin_left = 1299.63
margin_top = 125.456
margin_right = 1543.63
margin_bottom = 259.456
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Save"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBg" type="ParallaxBackground" parent="."]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
scroll_base_scale = Vector2( 0.7, 0 )
script = ExtResource( 11 )

[node name="Sky" type="ParallaxLayer" parent="ParallaxBg"]
motion_mirroring = Vector2( 400, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBg/Sky"]
scale = Vector2( 1000, 2 )
texture = ExtResource( 13 )
centered = false
offset = Vector2( -15, 0 )

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBg"]
motion_mirroring = Vector2( 800, 100 )

[node name="Sprite1" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 14, 64 )
texture = ExtResource( 15 )
centered = false

[node name="Sprite2" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 202, 12 )
texture = ExtResource( 15 )
centered = false

[node name="Sprite3" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 77, 23 )
texture = ExtResource( 18 )
centered = false

[node name="Sprite4" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 272, 65 )
texture = ExtResource( 18 )
centered = false

[node name="Sprite5" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 127, 79 )
texture = ExtResource( 14 )
centered = false

[node name="Sprite6" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 337, 35 )
texture = ExtResource( 14 )
centered = false

[node name="Sprite7" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 428.25, 64 )
texture = ExtResource( 15 )
centered = false

[node name="Sprite8" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 616.25, 12 )
texture = ExtResource( 15 )
centered = false

[node name="Sprite9" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 491.25, 23 )
texture = ExtResource( 18 )
centered = false

[node name="Sprite10" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 686.25, 65 )
texture = ExtResource( 18 )
centered = false

[node name="Sprite11" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 541.25, 79 )
texture = ExtResource( 14 )
centered = false

[node name="Sprite12" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 751.25, 35 )
texture = ExtResource( 14 )
centered = false

[node name="Mount2" type="ParallaxLayer" parent="ParallaxBg"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 3140, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 0, 300 )
texture = ExtResource( 17 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite2" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 391.165, 300 )
texture = ExtResource( 17 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite7" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( -775.696, 300 )
texture = ExtResource( 17 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite8" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( -384.531, 300 )
texture = ExtResource( 17 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite3" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 783.25, 300 )
texture = ExtResource( 17 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite4" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 1174.41, 300 )
texture = ExtResource( 17 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite5" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 1564.6, 300 )
texture = ExtResource( 17 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite6" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 1955.77, 300 )
texture = ExtResource( 17 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Mount1" type="ParallaxLayer" parent="ParallaxBg"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 3250, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 14, 300 )
texture = ExtResource( 16 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite2" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 428.25, 300 )
texture = ExtResource( 16 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite7" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( -797.759, 300 )
texture = ExtResource( 16 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite8" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( -383.509, 300 )
texture = ExtResource( 16 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite3" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 830.788, 300 )
texture = ExtResource( 16 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite4" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 1224.41, 300 )
texture = ExtResource( 16 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite5" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 1638.66, 300 )
texture = ExtResource( 16 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite6" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 2041.2, 300 )
texture = ExtResource( 16 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/GridContainer/Yellow" to="." method="_on_Yellow_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/GridContainer/Green" to="." method="_on_Green_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/GridContainer/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/GridContainer/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/GridContainer/Pink" to="." method="_on_Pink_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/GridContainer/Rabbit" to="." method="_on_Rabbit_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
